<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="50dp"
    android:paddingEnd="50dp"
    tools:context=".SelectOrderTemplate">

    <TextView
        android:id="@+id/select_order_label_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/select_order_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <android.widget.Button
        android:id="@+id/add_order_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_menu_btn"
        android:onClick="goChichi"
        android:text="@string/go_chichi"
        android:textColor="#0D47A1" />

    <android.widget.Button
        android:id="@+id/play_again_shake_it"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/main_menu_btn"
        android:onClick="goToAddOrder"
        android:text="@string/add_order_btn"
        android:textColor="#0D47A1" />
</LinearLayout>